--- a/css/main.css
+++ b/css/main.css
@@ -2253,3 +2253,25 @@ img {
   padding: 32px;
   position: relative;
 }
+.ban_img {
+  position: relative;
+  top: -20px;
+  left: -350px;
+}
+
+@media screen and (max-width: 768px) {
+  .ban_img {
+    position: relative;
+    top: 126px;
+    left: -176px;
+  }
+  .story__col {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    width: 100%;
+  }
+  .story__title {
+    font-size: 18vw;
+  }
+}
