--- a/css/main.css
+++ b/css/main.css
@@ -1258,20 +1258,7 @@ img {
   font-size: 60px;
   text-align: center;
   margin-bottom: 64px;
-  text-shadow: #ff6289 4px 0 0, #ff6289 3.87565px 0.989616px 0,
-    #ff6289 3.51033px 1.9177px 0, #ff6289 2.92676px 2.72656px 0,
-    #ff6289 2.16121px 3.36588px 0, #ff6289 1.26129px 3.79594px 0,
-    #ff6289 0.282949px 3.98998px 0, #ff6289 -0.712984px 3.93594px 0,
-    #ff6289 -1.66459px 3.63719px 0, #ff6289 -2.51269px 3.11229px 0,
-    #ff6289 -3.20457px 2.39389px 0, #ff6289 -3.69721px 1.52664px 0,
-    #ff6289 -3.95997px 0.56448px 0, #ff6289 -3.97652px -0.432781px 0,
-    #ff6289 -3.74583px -1.40313px 0, #ff6289 -3.28224px -2.28625px 0,
-    #ff6289 -2.61457px -3.02721px 0, #ff6289 -1.78435px -3.57996px 0,
-    #ff6289 -0.843183px -3.91012px 0, #ff6289 0.150409px -3.99717px 0,
-    #ff6289 1.13465px -3.8357px 0, #ff6289 2.04834px -3.43574px 0,
-    #ff6289 2.83468px -2.82216px 0, #ff6289 3.44477px -2.03312px 0,
-    #ff6289 3.84068px -1.11766px 0, #ff6289 3.9978px -0.132717px 0,
-    #ff6289 0 16px 0;
+  text-shadow: none !important;
 }
 
 @media screen and (max-width: 640px) {
