--- a/css/main.css
+++ b/css/main.css
@@ -439,6 +439,9 @@ img {
   .ban_txt {
     margin-top: 40px;
   }
+  .ttl {
+    font-size: 50px !important;
+  }
   .logo_ds {
     color: #fff;
     font-size: 42px;
