--- a/css/main.css
+++ b/css/main.css
@@ -2305,3 +2305,35 @@ img {
   white-space: nowrap;
   text-shadow: none !important;
 }
+
+.footer__btn,
+.header__btn {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 16px;
+  text-shadow: none !important;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: 0.01em;
+  padding: 10px 24px;
+  border-radius: 20px;
+  background: #ff8d00;
+  border: 4px solid #ff8d00;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-shadow: 0 6px 0 #ff8d00;
+  box-shadow: 0 6px 0 #ff8d00;
+  text-transform: uppercase;
+  position: relative;
+  -webkit-transition: -webkit-transform 0.1s ease-in-out;
+  transition: transform 0.1s ease-in-out;
+  transition: transform 0.1s ease-in-out, -webkit-transform 0.1s ease-in-out;
+}
+
+.btn:hover {
+  color: #fff;
+  background-color: #ff8d00;
+  border-color: #ff8d00;
+}
