--- a/css/main.css
+++ b/css/main.css
@@ -110,7 +110,21 @@ body {
   font-weight: 400;
   font-style: normal;
   background-size: cover;
-  background-image: linear-gradient(#1111113b, #11111154), url(/img/bg.jpg);
+  background-image: linear-gradient(
+    to right bottom,
+    #f7bf75,
+    #f7ae74,
+    #f49e76,
+    #ee8f79,
+    #e5817e,
+    #d87484,
+    #c76a89,
+    #b3628d,
+    #955a90,
+    #72558e,
+    #4c4f86,
+    #1e487a
+  );
   background-repeat: no-repeat;
   background-position: center center;
   color: #fff;
@@ -2336,4 +2350,17 @@ img {
   color: #fff;
   background-color: #ff8d00;
   border-color: #ff8d00;
+}
+.water {
+  position: relative;
+  min-height: 100vh;
+  padding: 0px 0 25vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  overflow: hidden;
 }
