--- a/css/main.css
+++ b/css/main.css
@@ -2364,3 +2364,19 @@ img {
   flex-direction: column;
   overflow: hidden;
 }
+
+@media screen and (max-width: 768px) {
+  .water {
+    position: relative;
+    min-height: 100vh;
+    padding: 130px 0 25vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    overflow: hidden;
+  }
+}
